ChangeLog
=========

https://github.com/eraserhd/parinfer-rust/compare/v0.4.2...HEAD[Unreleased]
---------------------------------------------------------------------------


https://github.com/eraserhd/parinfer-rust/compare/v0.4.1...v0.4.2[0.4.2]
------------------------------------------------------------------------

=== Fixed

* Errors in build and release actions.


https://github.com/eraserhd/parinfer-rust/compare/v0.4.0...v0.4.1[0.4.1]
------------------------------------------------------------------------

=== Fixed

* Test error "Could not get parinfer library path" (#57).

=== Vim

* Add support for loading with Vim/Neovim `packadd`
* Add support for [Fennel](https://fennel-lang.org)

=== Kakoune

* Prevent Unicode characters from "locking up" the cursor.  Closes #55.
  (This requires a version of Kakoune dated Nov 12, 2019 or later, with the
  `-display-column` option to `:select`.)

https://github.com/eraserhd/parinfer-rust/compare/v0.3.1...v0.4.0[0.4.0]
------------------------------------------------------------------------

=== Releases

* GitHub Actions test and release on Linux, Windows, and Mac

=== Emacs

* Added support for Emacs!!!

=== Kakoune

* Restore module support since packaged versions of Kakoune now have it.
* Fix filetype detection for removing parinfer hooks

https://github.com/eraserhd/parinfer-rust/compare/v0.3.0...v0.3.1[v0.3.1]
-------------------------------------------------------------------------

=== Changed

* Kakoune script can't use modules yet.  (Packaged versions of Kakoune do
  not support them yet.)

https://github.com/eraserhd/parinfer-rust/compare/v0.2.0...v0.3.0[v0.3.0]
-------------------------------------------------------------------------

=== Changed

* Kakoune script now uses modules.
* Published to NPM, usable from JavaScript that supports WebAssembly with a
  wrapper that works like the original JavaScript parinfer.
* Result from C wrapper is now in thread-local storage, allowing concurrent